apps/app-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-hub
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-app-hub
  template:
    metadata:
      labels:
        app: the-app-hub
    spec:
      containers:
        - name: weather
          image: tsears/weather:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: the-app-hub
  namespace: apps
spec:
  selector:
    app: the-app-hub
  ports:
    - port: 80
      targetPort: 5000
